# arcana-data-store-extension-template

./: .gitignore  README.rst  conftest.py  pyproject.toml
.github/workflows/: tests.yml
arcana/changeme/data/: local.py  remote.py
arcana/changeme/data/tests/: test_local.py  test_store.py
arcana/changeme/deploy/tests/: test_deploy.py
